# skPlayer

./: .gitignore  README.md  addConnection.html  index.html  main.js  music-list.json  package-lock.json  package.json
server/: index.js  package-lock.json  package.json
src/: skPlayer.css  skPlayer.js  skPlayer.scss
src/mac_wav_decoder/: CMakeLists.txt  audioPlay.c
src/socket.io/: socket.io-stream.js
